Fix paths related issues